--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    compile 'org.yaml:snakeyaml:1.17'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
