--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,7 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     compile 'org.yaml:snakeyaml:1.17'
+    compile 'org.jenkins-ci.main:jenkins-core:1.513'
+    compile 'com.cloudbees.jenkins.plugins:cloudbees-credentials:3.3'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
